modules/networking/subnets.tf
#################################################
# Public Subnets
#################################################

resource "aws_subnet" "public" {

  count = length(var.public_subnet_cidrs)

  vpc_id = aws_vpc.this.id

  cidr_block = var.public_subnet_cidrs[count.index]

  availability_zone = var.availability_zones[count.index]

  map_public_ip_on_launch = true

  tags = merge(
    var.common_tags,
    {
      Name = "${var.naming_prefix}-public-subnet-${count.index + 1}"
      Type = "Public"
    }
  )

}

#################################################
# Private Subnets
#################################################

resource "aws_subnet" "private" {

  count = length(var.private_subnet_cidrs)

  vpc_id = aws_vpc.this.id

  cidr_block = var.private_subnet_cidrs[count.index]

  availability_zone = var.availability_zones[count.index]

  map_public_ip_on_launch = false

  tags = merge(
    var.common_tags,
    {
      Name = "${var.naming_prefix}-private-subnet-${count.index + 1}"
      Type = "Private"
    }
  )

}
