modules/networking/vpc.tf
#################################################
# Virtual Private Cloud (VPC)
#################################################

resource "aws_vpc" "this" {

  cidr_block = var.vpc_cidr

  enable_dns_support = true

  enable_dns_hostnames = true

  tags = merge(
    var.common_tags,
    {
      Name = "${var.naming_prefix}-vpc"
    }
  )

}

#################################################
# Internet Gateway
#################################################

resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id

  tags = merge(
    var.common_tags,
    {
      Name = "${var.naming_prefix}-igw"
    }
  )

}
